# git-repokit

./: .flake8  .gitignore  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml
configs/: README.md  complete-enterprise.json  custom-ml-project.json  history-protection.json  minimal-python.json  standard-web.json  temp-renamer.json
docs/: Adoption-Guide.md  Auth-Guide.md  Branch-Strategies.md  Deployment-Demo.md  Migration-Guide.md  README.md  Recipes-And-Howtos.md  Why-RepoKit-Exists.md  Workflow-Guide.md
private/claude/: 2025_05_30__20_48_40__git_merge_main_to_dev.md  (+26 more)
repokit/: __init__.py  __main__.py  __version__.py  auth_integration.py  branch_utils.py  cli.py  config.py  defaults.py  directory_analyzer.py  directory_profiles.py  git_config.py  guardrails.py  history_cleaner.py  history_protection.py  remote_integration.py  repo-manager-worktree-fix.py  repo_manager.py  template_engine.py  utils.py
revisions/: .gitkeep  setup.py  test_core_functionality_old.py  test_core_functionality_old2.py
scripts/: README.md  bootstrap.py  bootstrap_simple.py  debug_bootstrap.py  listall-excludes.cmd  repokit-quick-adopt.py  update_version.py
tests/: README.md  __init__.py  run_tests.py  test_cli_integration.py  test_core_functionality.py  test_deployment_scenarios.py  test_directory_profiles.py  test_github_integration.py  test_guardrails.py  test_utils.py
(+36 files in other folders)
