[build-system]
# bump setuptools so we can use PEP 621 metadata
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repokit"
version = "0.4.0"
description = "A tool for creating standardized Git repositories with complex branching and worktree workflows"
readme = "README.md"
requires-python = ">=3.7"
# you have no true runtime deps now that pkg_resources is gone!
dependencies = []

[project.scripts]
repokit = "repokit.cli:main"

[project.optional-dependencies]
# keep your formatter/tester/etc here
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["repokit", "repokit.*"]

[tool.setuptools.package-data]
# make sure your `templates/` directory ends up in the wheel/sdist
"repokit" = ["templates/*"]

